reading-deleting-dom-elements-lab completed

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "9.7.0",
-    "cypress-watch-and-reload": "1.10.3",
-    "live-server": "1.1.0"
+    "cypress": "^10.6.0",
+    "live-server": "^1.1.0"
+  },
+  "dependencies": {
+    "cypress-watch-and-reload": "^1.10.3"
   }
 }
